--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,8 @@
 playwright~=1.28.0
 parsel~=1.7.0
+django==4.0.6
+django-extensions==3.2.0
+django-rest-multiple-models==2.1.3
+django-storages==1.13.1
+djangorestframework==3.13.1
+psycopg2-binary==2.9.1
