--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ django-extensions==3.2.0
 django-rest-multiple-models==2.1.3
 django-storages==1.13.1
 djangorestframework==3.13.1
+django-cors-headers==3.13.0
 psycopg2-binary==2.9.1
 requests
 pyPDF2
